cabal-version:      2.4
name:               adventofcode2021
version:            0.1.0.0

synopsis: Advent Of Code 2021

author:             Paul Bedaride
maintainer:         ptitpoulpe@ptitpoulpe.fr

extra-source-files:
    CHANGELOG.md
    README.md

library
  hs-source-dirs:      src
  exposed-modules:
                       Util
  build-depends:       base ^>=4.13.0.0
  default-language:    Haskell2010

executable aoc-01p1
    main-is:          Day01/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-01p2
    main-is:          Day01/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-02p1
    main-is:          Day02/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-02p2
    main-is:          Day02/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-03p1
    main-is:          Day03/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-03p2
    main-is:          Day03/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-04p1
    main-is:          Day04/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , parsec
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-04p2
    main-is:          Day04/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , parsec
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-05p1
    main-is:          Day05/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , regex-tdfa
      , containers
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-05p2
    main-is:          Day05/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , regex-tdfa
      , containers
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010