cabal-version:      2.4
name:               adventofcode2021
version:            0.1.0.0

synopsis: Advent Of Code 2021

author:             Paul Bedaride
maintainer:         ptitpoulpe@ptitpoulpe.fr

extra-source-files:
    CHANGELOG.md
    README.md

library
  hs-source-dirs:      src
  exposed-modules:
                       Util
  build-depends:       base ^>=4.13.0.0
                     , text
                     , pretty-simple
  default-language:    Haskell2010

executable aoc-01p1
    main-is:          Day01/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-01p2
    main-is:          Day01/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-02p1
    main-is:          Day02/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-02p2
    main-is:          Day02/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-03p1
    main-is:          Day03/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-03p2
    main-is:          Day03/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-04p1
    main-is:          Day04/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , parsec
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-04p2
    main-is:          Day04/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , parsec
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-05p1
    main-is:          Day05/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , regex-tdfa
      , containers
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-05p2
    main-is:          Day05/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , regex-tdfa
      , containers
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-06p1
    main-is:          Day06/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , split
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-06p2
    main-is:          Day06/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , split
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-07p1
    main-is:          Day07/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , split
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-07p2
    main-is:          Day07/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , split
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-08p1
    main-is:          Day08/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , split
      , containers
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-08p2
    main-is:          Day08/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , split
      , containers
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-09p1
    main-is:          Day09/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , split
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-09p2
    main-is:          Day09/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , split
      , containers
      , text
      , pretty-simple
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-10p1
    main-is:          Day10/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-10p2
    main-is:          Day10/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-11p1
    main-is:          Day11/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , containers
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-11p2
    main-is:          Day11/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , containers
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-12p1
    main-is:          Day12/Part1.hs
    build-depends:
        base ^>=4.13.0.0
      , split
      , containers
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010

executable aoc-12p2
    main-is:          Day12/Part2.hs
    build-depends:
        base ^>=4.13.0.0
      , split
      , containers
      , adventofcode2021
    hs-source-dirs:   app
    default-language: Haskell2010